fixed horizontal scrolling menus (ResearchHub/discussion#41)

--- a/pages/stylesheets/App.css
+++ b/pages/stylesheets/App.css
@@ -28,10 +28,6 @@
   visibility: hidden;
 }
 
-.menu-wrapper--inner {
-  transform: unset !important;
-}
-
 .horizontal-menu {
   width: 105%;
 }
